<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/btBolTrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btBolPes"
        android:layout_alignRight="@+id/btBolPes"
        android:layout_above="@+id/btBolPes"
        android:text="@string/bolsTra" />

    <Button
        android:id="@+id/btBolPes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btCroqui"
        android:layout_alignRight="@+id/btCroqui"
        android:layout_above="@+id/btCroqui"
        android:text="@string/bolsPes" />

    <Button
        android:id="@+id/btCroqui"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/visCroqui" />
    
    <Button 
        android:id="@+id/btSincronizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btCroqui"
        android:layout_alignRight="@+id/btCroqui"
        android:layout_below="@+id/btCroqui"
        android:text="@string/sinc"/>

</RelativeLayout>